# ppocr

./: CMakeLists.txt  README.md  cc.cpp  cc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  uils.hpp  vv.cpp  vv.h
auto_log/: autolog.h
include/: func_declare.h  utility.h
output/: Snipaste_2025-04-21_19-06-49.png_0.html  Snipaste_2025-04-21_19-07-07.png_0.html  Snipaste_2025-04-21_19-07-07.png_1.html  eu-003_0_test.jpg_0.html  eu-003_0_test.jpg_1.html  eu-003_0_test.jpg_2.html  wired1.jpg_0.html  wired7.jpg_0.html
src/: args.cpp  func_declare.cpp  main.cpp  paddleocr.cpp  utility.cpp
